

<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    tools:context="superbd.restaurant.restaurant_chooser">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">

        <include
            android:id="@+id/tool_bar"
            layout="@layout/tool_bar"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:weightSum="1"
            android:orientation="vertical">


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.35"
            android:layout_gravity="center_vertical"
            >

        <ImageView
            android:id="@+id/city_image"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:scaleType="fitXY"
            android:src="@drawable/background_city_norrero"/>

          <ImageView
              android:src="@drawable/ic_navigation"
              android:layout_marginLeft="25dp"
              android:layout_marginTop="15dp"
              android:layout_width="30dp"
              android:layout_height="30dp" />

            <TextView
                android:id="@+id/hello_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Hello!"

                android:layout_above="@+id/order_text"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="30sp"
                />
            <TextView
                android:id="@+id/order_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Let's book your table and order your food"

                android:gravity="center"
                android:layout_centerVertical="true"

                android:textColor="@color/white"
                android:textAppearance="?android:textAppearanceSmall"
                />

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_below="@+id/order_text"
                android:layout_centerVertical="true"
                android:layout_centerHorizontal="true">

                <Button
                    android:id="@+id/select_city"
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text="@string/city_name"
                    android:textSize="15sp"
                    android:background="@android:color/transparent"
                    style="?android:borderlessButtonStyle"
                    android:layout_centerHorizontal="true" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="fill_parent"
                    android:src="@drawable/arrow_small"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="2dp"
                    android:layout_toRightOf="@+id/select_city"/>

                </RelativeLayout>

            <!-- <Button
                 android:id="@+id/select_city"
                 android:layout_width="120dp"
                 android:layout_height="20dp"
                 android:text="Norrebro"
                 android:textSize="?android:textAppearanceMedium"
                 android:layout_alignParentBottom="true"


                 android:background="@drawable/btn_city_background"
                 style="?android:borderlessButtonStyle"
                 android:layout_centerHorizontal="true"
                 android:layout_marginBottom="10dp"
                 />-->
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/choosing_options"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.65"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.28"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:background="@color/white">

                <Button
                    android:id="@+id/decrease_date"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.15"
                    android:background="@drawable/inset_left_arrow"
                    style="?android:borderlessButtonStyle"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.75"
                    android:gravity="center"
                    android:layout_marginBottom="15dp"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical">

                <TextView
                    android:id="@+id/today"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.60"
                    android:text="@string/current_day"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textSize="32dp"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal|center_vertical"
                    android:textColor="@color/color_current_day"/>

                <TextView
                    android:id="@+id/current_date"
                    android:layout_width="fill_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.25"
                    android:text="@string/current_date"
                    android:textColor="@color/color_date_text"
                    android:textAppearance="?android:textAppearanceSmall"
                    android:gravity="center_horizontal"
                    />
                </LinearLayout>

                <Button
                    android:id="@+id/increase_date"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.15"
                    android:background="@drawable/inset_right_arrow"
                    style="?android:borderlessButtonStyle"/>
                </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:background="@color/gray"
                android:paddingRight="10dp"
                android:paddingLeft="10dp"
                android:layout_marginRight="10dp"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.28"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:weightSum="1"
                android:background="@color/white"
                android:orientation="horizontal">


                <Button
                    android:id="@+id/decrease_time"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.15"

                    android:layout_gravity="center"
                    android:background="@drawable/inset_left_arrow"
                    style="?android:borderlessButtonStyle"/>

                <TextView
                    android:id="@+id/current_hour"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.355"

                    android:text="@string/current_hour"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textSize="40dp"
                    android:padding="2dp"
                    android:gravity="right|center"
                    android:textColor="@color/color_current_day"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:text=":"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:textColor="@color/color_current_day"/>


                <TextView
                    android:id="@+id/current_minute"
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.355"
                    android:text="@string/current_minute"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textSize="40dp"
                    android:padding="2dp"
                    android:gravity="left|center"
                    android:textColor="@color/color_current_day"/>

                <Button
                    android:id="@+id/increase_time"
                    android:layout_width="0dp"
                    android:layout_weight="0.15"
                    android:layout_height="fill_parent"

                    android:background="@drawable/inset_right_arrow"
                    style="?android:borderlessButtonStyle"/>
                </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="2dp"
                android:layout_marginLeft="10dp"
                android:background="@color/gray"
                android:layout_marginRight="10dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="0.45"
                android:background="@color/white"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:orientation="horizontal"
                android:gravity="center_horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:layout_weight="0.5"

                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/decrease_people"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_weight="0.23"
                        android:background="@drawable/inset_left_arrow"
                        style="?android:borderlessButtonStyle"

                        android:layout_gravity="left|center"/>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_weight="0.35"
                        android:orientation="vertical"
                        android:gravity="center"
                        >

                        <TextView
                            android:id="@+id/people_count"
                            android:layout_width="fill_parent"
                            android:layout_height="50dp"
                            android:text="@string/people_count"
                            android:textSize="35dp"
                            android:textColor="@color/color_current_day"
                            android:gravity="center"
                            />

                        <TextView
                            android:layout_width="fill_parent"
                            android:layout_height="20dp"
                            android:text="People"
                            android:textColor="@color/color_date_text"
                            android:gravity="center|top"/>

                    </LinearLayout>
                    <Button
                        android:id="@+id/increase_people"
                        android:layout_width="0dp"
                        android:layout_height="100dp"
                        android:layout_weight="0.23"
                        android:background="@drawable/inset_right_arrow"
                        style="?android:borderlessButtonStyle"

                        android:layout_gravity="right|center"/>
                    </LinearLayout>


                <View
                    android:layout_width="2dp"
                    android:layout_height="fill_parent"
                    android:layout_gravity="center"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="40dp"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:background="@color/gray"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="0.5"
                    android:layout_height="fill_parent"
                    android:background="@color/white"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.35"/>


                <ImageButton
                    android:id="@+id/invite_friends"
                    android:layout_width="fill_parent"
                    android:layout_weight="0.30"
                    android:layout_gravity="center"
                    android:layout_height="0dp"


                    android:src="@drawable/inset_add"
                    style="?android:borderlessButtonStyle"/>
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="0dp"
                        android:layout_weight="0.45"
                        android:text="@string/invite_friends_text"
                        android:textColor="@color/color_date_text"
                        android:textAppearance="?android:textAppearanceSmall"
                        android:layout_gravity="center_horizontal"
                        android:gravity="top|center"/>
                </LinearLayout>
            </LinearLayout>

            <Button
                android:id="@+id/continue_button"
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_gravity="bottom"
                android:text="@string/continue_text"
                android:textAppearance="?android:textAppearanceMedium"
                android:textColor="@color/textBrown"
                android:background="@color/gray"/>
            </LinearLayout>
        </LinearLayout>
        </FrameLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/RecyclerView"
        android:layout_width="320dp"
        android:layout_height="match_parent"
        android:layout_gravity = "left"
        android:background="#ffffff"
        android:scrollbars="vertical">

        </android.support.v7.widget.RecyclerView>




</android.support.v4.widget.DrawerLayout>

